helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuxtjs-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - subhiqudsi.dev
    secretName: subhiqudsi-tls
  rules:
  - host: subhiqudsi.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nuxtjs-service
            port:
              number: 80
